[gd_scene load_steps=7 format=3 uid="uid://cisg4qwpgx8eb"]

[ext_resource type="Script" path="res://场景/homing_missle.gd" id="1_6aqsn"]
[ext_resource type="Texture2D" uid="uid://baa31wmtma657" path="res://资源/muzzle_02.png" id="1_p6p6k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sytd5"]
radius = 18.0278

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4hmbl"]
polygon = PackedVector2Array(16, 0, 12, 3, 0, 3, -5, 5, -26, 0, -5, -4, 0, -3, 12, -3)

[sub_resource type="Curve" id="Curve_8do56"]
_data = [Vector2(0.00556266, 0.0129609), 0.0, 0.0, 0, 0, Vector2(0.120098, 1), 0.0, 0.0, 0, 0, Vector2(0.449185, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_0ecgn"]
offsets = PackedFloat32Array(0.016, 0.159, 0.786, 1)
colors = PackedColorArray(0, 0, 0, 0, 0.827451, 0.419608, 0.227451, 1, 0.941176, 0.882353, 0.529412, 1, 1, 1, 1, 0)

[node name="HomingMissle" type="Area2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_6aqsn")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, -5, -5, 5, 0, 3, 12, 3, 16, 1, 12, -3, 0, -3)

[node name="Destruction" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destruction"]
shape = SubResource("CircleShape2D_sytd5")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_4hmbl")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(-15, 0)
rotation = 1.5708
scale = Vector2(0.06, 0.06)
amount = 40
lifetime = 0.1
randomness = 0.59
fixed_fps = 30
local_coords = true
texture = ExtResource("1_p6p6k")
direction = Vector2(-1, 0)
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("Curve_8do56")
color_ramp = SubResource("Gradient_0ecgn")

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(0.8, 0.8)
color = Color(0.0313726, 0.0784314, 0.133333, 1)
polygon = PackedVector2Array(-6, -6, -6, 6, 0, 2, 0, -2)

[node name="Polygon2D" type="Polygon2D" parent="Polygon2D"]
scale = Vector2(0.8, 0.8)
color = Color(0.980392, 0.894118, 0.815686, 1)
polygon = PackedVector2Array(0, -4, 19, -4, 19, 5, 0, 5)

[node name="Polygon2D2" type="Polygon2D" parent="Polygon2D"]
scale = Vector2(0.8, 0.8)
color = Color(0.913725, 0.423529, 0.952941, 1)
polygon = PackedVector2Array(19, -4, 19, 5, 25, 1)

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Destruction" to="." method="_on_destruction_body_entered"]
[connection signal="body_exited" from="Destruction" to="." method="_on_destruction_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
